removed save method from client service + refactoring. removed ClientMapperImpl.kt
